# synesthesiaX

./: CMakeLists.txt  README.md  package.xml
calibration/: chessboard_intrinsics.py  intrinsics.py
config/: classes.yaml  pinhole_model.yaml  pinhole_model_back_camera.yaml  pinhole_model_tmp.yaml
include/: Projector_front_camera.hpp  Utils.hpp
launch/: synesthesiax.launch.py  synesthesiax_back_camera.launch.py  synesthesiax_notsync.launch.py  synesthesiax_tao.launch.py
src/: Projector.cpp  Projector.hpp  Projector_front_camera.cpp  synesthesiax.cpp  synesthesiax_front_camera.cpp  synesthesiax_notsync.cpp
